@@ -41,6 +41,7 @@
 #define MACRO_TYPE_SCRIPT		0x0400
 #define MACRO_TYPE_ITEM_EXPRESSION	0x0800
 #define MACRO_TYPE_LLD_LIFETIME		0x1000
+#define MACRO_TYPE_SNMP_OID		0x2000
 
 #define STR_CONTAINS_MACROS(str)	(NULL != strchr(str, '{'))
 
@@ -54,5 +55,8 @@ int	evaluate(double *value, char *exp, char *error, int maxerrlen);
 
 void	zbx_format_value(char *value, size_t max_len, zbx_uint64_t valuemapid,
 		const char *units, unsigned char value_type);
+
+void	substitute_discovery_macros(char **data, struct zbx_json_parse *jp_row);
+void	substitute_key_macros(char **data, DC_HOST *dc_host, struct zbx_json_parse *jp_row, int macro_type);
 
 #endif
