@@ -2186,6 +2186,33 @@ int	is_function_char(char c)
 
 /******************************************************************************
  *                                                                            *
+ * Function: is_macro_char                                                    *
+ *                                                                            *
+ * Return value:  SUCCEED - the char is allowed in the macro name             *
+ *                FAIL - otherwise                                            *
+ *                                                                            *
+ * Author: Alexander Vladishev                                                *
+ *                                                                            *
+ * Comments: allowed characters in macro names: '0-9A-Z._'                    *
+ *           !!! Don't forget sync code with PHP !!!                          *
+ *                                                                            *
+ ******************************************************************************/
+int	is_macro_char(char c)
+{
+	if ('A' <= c && c <= 'Z')
+		return SUCCEED;
+
+	if ('.' == c || '_' == c)
+		return SUCCEED;
+
+	if ('0' <= c && c <= '9')
+		return SUCCEED;
+
+	return FAIL;
+}
+
+/******************************************************************************
+ *                                                                            *
  * Function: is_time_function                                                 *
  *                                                                            *
  * Purpose:                                                                   *
